# Archischema

./: .env.example  .gitignore  ARCHITECTURE.md  CARGO_CHECK_GUIDE.md  CHANGELOG.md  Cargo.toml  Makefile  OPTIMIZATION_REPORT_RU.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  TODO.md  Taskfile.yml  docker-compose.yaml  package-lock.json  package.json  tailwind.config.js
docs/: API_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  SCREENSHOT_GUIDE.md  TABLE_CREATION.md  UI_GUIDE.md  architecture.md  canvas-navigation.md  implementation-notes.md  setup.md  sql-parser.md  testing-checklist.md
docs/liveshare/: LIVESHARE_COMPLETE_GUIDE.md  MESSAGE_CLASSIFICATION_GUIDE.md  PHASE10_UI_INDICATORS.md  PHASE11_IDLE_DETECTION.md  PHASE12_LOAD_TESTING.md  PHASE8_PERMISSIONS.md  PHASE9_SHARE_LINK.md  PHASE_3_MESSAGE_TYPES.md  incremental-updates.md  phase4-summary.md  phase5-summary.md  phase7-snapshots.md
migrations/: 20251213141600_initial_schema.sql  20251223181247_liveshare_sessions.sql  20251224100000_snapshots.sql  20251225080000_liveshare_permissions.sql
scripts/: compress-assets.sh
src/: app.rs  lib.rs  main.rs
src/core/: ai_api.rs  ai_config.rs  ai_tools.rs  auto_layout.rs  config.rs  export.rs  mod.rs  schema.rs  sql_parser.rs  tests.rs  validation.rs
src/core/auth/: api.rs  jwt.rs  mod.rs  service.rs
src/core/db/: mod.rs  models.rs  pool.rs
src/core/db/repositories/: diagram.rs  folder.rs  liveshare.rs  mod.rs  session.rs  share.rs  user.rs
src/core/diagrams/: api.rs  mod.rs
src/core/folders/: api.rs  mod.rs
src/core/liveshare/: api.rs  auth.rs  broadcast_manager.rs  cursor_broadcaster.rs  idle_detection.rs  load_test.rs  load_test_integration.rs  mod.rs  protocol.rs  rate_limiter.rs  reconciliation.rs  room.rs  snapshots.rs  throttling.rs  websocket.rs
src/core/sharing/: api.rs  mod.rs
src/ui/: activity_tracker.rs  ai_chat.rs  auth_utils.rs  canvas.rs  column_editor.rs  graph_ops.rs  icon.rs  liveshare_client.rs  liveshare_panel.rs  markdown.rs  mod.rs  new_table_dialog.rs  notifications.rs  remote_cursors.rs  settings_modal.rs  sidebar.rs  source_editor.rs  sync_status_indicator.rs  table.rs  table_editor.rs  theme.rs
src/ui/auth/: context.rs  login_form.rs  mod.rs  register_form.rs  user_menu.rs
src/ui/common/: badge.rs  button.rs  dropdown.rs  form.rs  keyboard.rs  message.rs  mod.rs  modal.rs  spinner.rs  tabs.rs  tooltip.rs
src/ui/pages/: dashboard.rs  editor.rs  landing.rs  login.rs  mod.rs  not_found.rs  profile.rs  register.rs
style/: input.css
