[package]
name = "diagramix"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0" }
leptos_meta = { version = "0.8.0" }
axum = { version = "0.8.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "=0.2.105", optional = true }
petgraph = { version = "0.8.3", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle
output-name = "diagramix"

# The site root folder is where cargo-leptos generate all output
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
site-pkg-dir = "pkg"

# The source CSS file
style-file = "style/output.css"

# Assets source dir. All files found here will be copied and synchronized to site-root
assets-dir = "public"

# The IP and port where the server serves the content
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# The browserlist query used for optimizing the CSS
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
bin-default-features = false

# The features to use when compiling the lib target
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
lib-default-features = false

# The profile to use for the lib target when compiling for release
lib-profile-release = "wasm-release"
