[package]
name = "archischema"
authors = ["C0nstanta konstantinkoshevoj99@gmail.com"]
repository = "https://github.com/c0st1nus/Archischema"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0" }
leptos_meta = { version = "0.8.0" }
axum = { version = "0.8.0", optional = true }
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
tower-http = { version = "0.6", features = ["cors", "compression-full", "fs"], optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
pulldown-cmark = "0.13"
petgraph = { version = "0.8.3", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yrs = "0.25.0"
y-sync = "0.4.0"
uuid = { version = "1.19.0", features = ["v4", "serde", "js"] }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-sys = { version = "0.3", features = [
    "Window", "Navigator", "Clipboard", "Request", "RequestInit", "Response", "Headers", "Location",
    "WebSocket", "BinaryType", "MessageEvent", "CloseEvent", "ErrorEvent", "Event",
    "CustomEvent", "CustomEventInit",
    "Storage", "MediaQueryList", "MediaQueryListEvent",
    "Blob", "BlobPropertyBag", "Url", "HtmlElement", "HtmlAnchorElement", "Document"
], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
futures = { version = "0.3.31", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
tokio-stream = { version = "0.1", optional = true }
bcrypt = { version = "0.17.1", optional = true }
dashmap = { version = "6.1.0", optional = true }
chrono = { version = "0.4.42", features = ["serde"], optional = true }
tracing = { version = "0.1.43", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
dotenvy = { version = "0.15", optional = true }
tower = "0.5.2"
derive_more = { version = "2.1.0", features = ["full"] }

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:gloo-timers",
    "dep:web-sys",
    "dep:js-sys",
    "dep:wasm-bindgen-futures"
]
ssr = [
    "dep:axum",
    "dep:axum-extra",
    "dep:tokio",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:futures",
    "dep:bcrypt",
    "dep:dashmap",
    "dep:chrono",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:dotenvy",
    "dep:reqwest",
    "dep:tokio-stream",
    "leptos/ssr",
    "leptos_meta/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle
output-name = "archischema"

# The site root folder is where cargo-leptos generate all output
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
site-pkg-dir = "pkg"

# The source CSS file
style-file = "style/output.css"

# Assets source dir. All files found here will be copied and synchronized to site-root
assets-dir = "public"

# The IP and port where the server serves the content
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# The browserlist query used for optimizing the CSS
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
bin-default-features = false

# The features to use when compiling the lib target
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
lib-default-features = false

# The profile to use for the lib target when compiling for release
lib-profile-release = "wasm-release"

# Enable wasm-opt optimization
# Options: "0", "1", "2", "3", "4", "s", "z" (s and z optimize for size)
wasm-opt = "z"
